<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schedule Helper</string>
    <string name="hour_minute_divider">:</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_agree">I agree.</string>
    <string name="btn_not_agree">I do not agree.</string>
    <string name="btn_add">Add</string>

    <!--Titles, labels etc.-->
    <string name="lbl_listview_top">Top of data</string>
    <string name="lbl_share_app_title">A good App you should have: %s</string>
    <string name="lbl_share_app_content">Hello!\n\n\u00A0\u00A0\u00A0\u00A0Manage some features like mute, vibrate,
        sound of your devices with schedule, a timer, improve your daily life.\n\nDownload: market://details?id=com.schautup </string>
    <string name="lbl_about">About</string>
    <string name="lbl_su">Su</string>
    <string name="lbl_mo">Mo</string>
    <string name="lbl_tu">Tu</string>
    <string name="lbl_we">We</string>
    <string name="lbl_th">Th</string>
    <string name="lbl_fr">Fr</string>
    <string name="lbl_sa">Sa</string>
    <string name="lbl_no_history">There\'s still no logged data.</string>
    <string name="lbl_log_at">%1$s</string>
    <string name="lbl_on">ON</string>
    <string name="lbl_off">OFF</string>
    <string name="lbl_on_small">on</string>
    <string name="lbl_off_small">Off</string>
    <string name="lbl_can">can</string>
    <string name="lbl_can_not">can\'t</string>
    <string name="lbl_more">More</string>
    <string name="lbl_avoid_change">Changing rejected.</string>
    <string name="lbl_function_is_running"># Because %1$s is already %2$s.</string>
    <string name="lbl_can_not_set"># I couldn\'t change %1$s status.</string>
    <string name="lbl_operation_fail"># Warning! Exception happened while switching.</string>
    <string name="lbl_wifi_in_sleep">＃ Might be effected by a deep sleep mode.</string>
    <string name="lbl_left_from_wifi"># You might have left from an Wifi environment before.</string>
    <string name="lbl_left_from_mobile"># You might be in a Wifi environment.</string>
    <string name="lbl_max">Maximum</string>
    <string name="lbl_medium">Medium</string>
    <string name="lbl_min">Minimum</string>
    <string name="lbl_max_short">Max</string>
    <string name="lbl_medium_short">Med</string>
    <string name="lbl_min_short">Min</string>
    <string name="lbl_play_service">This application needs Google Play Service, you must install it first.</string>
    <string name="lbl_filter_name">Filter name…</string>
    <string name="lbl_filter_selection">No filter</string>
    <string name="lbl_label_name">Label name…</string>

    <!--Menu-->
    <string name="menu_add">Add New</string>
    <string name="menu_view">View</string>
    <string name="menu_sort_by_schedule">Sort by schedule.</string>
    <string name="menu_sort_by_edited_time">Sort by recently edited.</string>
    <string name="menu_share_app">Share this</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_backward">Backward</string>
    <string name="menu_filter">Filter</string>

    <!--Option dialog-->
    <string name="option_dlg_title">Option</string>
    <string name="option_recurrence_dlg_title">Recurrence</string>
    <string name="option_mute">@string/type_mute</string>
    <string name="option_vibrate">@string/type_vibrate</string>
    <string name="option_sound">@string/type_sound</string>
    <string name="option_wifi">@string/type_wifi</string>
    <string name="option_mobile">@string/type_mobile_data</string>
    <string name="option_brightness">@string/type_brightness</string>
    <string name="option_call_abort">@string/type_call_abort</string>
    <string name="option_bluetooth">@string/type_bluetooth</string>
    <string name="option_app_start">@string/type_app_start</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_body">&lt;b&gt;%1$s &lt;/b&gt;&lt;br&gt;Version %2$s &lt;br&gt;</string>
    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>
    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>
    <string name="about_eula_legal_text">Your use of this application is governed by a)Activating permissions of
        hardware that the features of this application need and work well. b)The Google Terms of
        Service (http://www.google.com/intl/en/policies/terms/), Google\'s Privacy
        Policy(http://www.google.com/intl/en/policies/privacy/). c)Any applicable Google service-specific terms of service of privacy
        policies. Google\'s terms of service and privacy policies may be updated from time to time and without
        notice.\n\n\nBy using the application, your agree to the use of your data and permissions of your hardware in
        accordance with Google\'s Privacy Policy and Google Terms of Service.</string>

    <!--Messages-->
    <string name="msg_try_to_add_schedule">Add a new schedule.</string>
    <string name="msg_try_to_add_schedule_fail">Sorry! Can not add a new item, because you\'ve scheduled
        same item at the same time point before.</string>
    <string name="msg_long_press_rmv_schedule">Tip! Long press on item, you can remove a schedule.</string>
    <string name="msg_long_press_rmv_log_history">Tip! Long press on item, you can remove a log.</string>
    <string name="msg_rmv_fail">Sorry! I can not remove the selected item.</string>
    <string name="msg_rmv_success">You have removed item(s) successfully.</string>
    <string name="msg_err">Operation is failed.</string>
    <string name="msg_tip_selection">Please select a type!</string>
    <string name="msg_tip_recurrence">Recurrence must be defined!</string>
    <string name="msg_tip_duplicated">Warning! Set %1$s at %2$s:%3$s has been defined, your change can\'t be
        proceed, please edit again.</string>
    <string name="msg_boot_start">%s has been started.</string>
    <string name="msg_wifi_on_off">Do you want to turn off or on wifi?\n\nNote!\nIf you\'ve left wifi environment, your current setting would be ignored.</string>
    <string name="msg_mobile_on_off">Do you want to turn off or on mobile network?\n\nNote!\nIf you\'re in a WIFI environment, your current setting would be ignored.</string>
    <string name="msg_brightness">How to set your display brightness?\n\nNote!\nSome applications that can control screen brightness could interrupt your setting and your setting would be ignored.</string>
    <string name="msg_bluetooth_on_off">Do you want to turn off or on your Bluetooth?</string>
    <string name="msg_reject_incoming_on_off">Do you want to reject all incoming calls?</string>
    <string name="msg_reject_incoming_duration">Duration:</string>
    <string name="msg_reject_incoming_duration_minutes">minute(s)</string>
    <string name="msg_reject_incoming_duration_hours">hour(s)</string>
    <string name="msg_reject_incoming_duration_hours_minutes">%1$sh%2$sm</string>
    <string name="msg_filter_name_must_given">Filter\'s name must be given.</string>
    <string name="msg_label_name_must_given">Label\'s name must be given.</string>

    <!--Settings-->
    <string name="settings_category_schedule_mode">Schedule mode</string>
    <string-array name="settings_schedule_modes">
        <item>@string/settings_hungry_mode</item>
        <item>@string/settings_thirsty_mode</item>
        <item>@string/settings_neutral_mode</item>
    </string-array>
    <string-array name="settings_schedule_modes_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="settings_sort_types">How to sort your list/grid?</string>
    <string-array name="settings_sort_types">
        <item>@string/menu_sort_by_edited_time</item>
        <item>@string/menu_sort_by_schedule</item>
    </string-array>
    <string-array name="settings_sort_types_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="settings_hungry_mode">Hungry</string>
    <string name="settings_hungry_mode_desc">Recommend mode if your device is charging or full changed.</string>
    <string name="settings_thirsty_mode">Thirsty</string>
    <string name="settings_thirsty_mode_desc">Recommend mode if your OS version is higher than Android 4.4.</string>
    <string name="settings_neutral_mode">Neutral</string>
    <string name="settings_neutral_mode_desc">Recommend mode if your OS version is lower than Android 4.4.</string>
    <string name="settings_pause">pause</string>
    <string name="settings_resume">work</string>
    <string name="settings_quick_title">Quick settings</string>
    <string name="settings_pause_resume">Pause/Go on?</string>
    <string name="settings_category_run_boot">Work at boot</string>
    <string name="settings_run_boot">Do we do all schedules at boot of device?</string>
    <string name="settings_run_boot_on">Yes</string>
    <string name="settings_run_boot_off">No</string>
    <string name="settings_current_os">[Currently]</string>
    <string-array name="settings_sort_direction_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string  name="settings_sort_direction">Sort direction</string>
    <string-array name="settings_sort_direction">
        <item>Descending</item>
        <item>Ascending</item>
    </string-array>


    <!--Drawer-->
    <string name="drawer_item_settings">@string/menu_settings</string>
    <string name="drawer_item_log_history">Log history</string>
    <string name="drawer_item_home_page">Home</string>
    <string name="drawer_item_filter">Filters</string>
    <string name="drawer_item_labels">Labels</string>

    <!--Type names-->
    <string name="type_mute">Mute</string>
    <string name="type_vibrate">Vibrate</string>
    <string name="type_sound">Sound</string>
    <string name="type_wifi">Wifi</string>
    <string name="type_mobile_data">Mobile</string>
    <string name="type_brightness">Brightness</string>
    <string name="type_call_abort">Abort\nincoming</string>
    <string name="type_bluetooth">Bluetooth</string>
    <string name="type_app_start">Start\nApps</string>

    <string name="type_mobile_data_nb">Mobile</string>
    <string name="type_call_abort_nb">Abort incoming</string>
    <string name="type_app_start_nb">Start Apps</string>

    <!--debug:-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!--release:--><!--<string name="banner_ad_unit_id">ca-app-pub-9133982521997162/3545646131</string>-->

    <string name="play_service_url">market://details?id=com.google.android.gms</string>

    <!-- External Apps -->
    <string name="extapp_title">More Apps:</string>
    <string name="extapp_download">Inst.</string>
    <string name="extapp_buy">Buy</string>
    <string name="extapp_open">Start</string>

</resources>
