<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_add"
        android:title="@string/menu_add"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_view"
        android:title="@string/menu_view"
        android:icon="@drawable/ic_action_listview"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort_by_schedule"
        android:title="@string/menu_sort_by_schedule"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_creation_time"
        android:title="@string/menu_sort_by_edited_time"
        app:showAsAction="never" />
</menu>
