<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_common_black"
        android:text="@string/msg_reject_incoming_on_off" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_reject_incoming_duration" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="1"
            android:textColor="@color/text_common_black"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_reject_incoming_duration_minutes" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="1"
            android:textColor="@color/text_common_black"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_reject_incoming_duration_hours" />
    </LinearLayout>
</LinearLayout>